--- a/settimeout.html
+++ b/settimeout.html
@@ -13,7 +13,9 @@ function generateRandomNum(){
 	setInterval(function(){
 		setTimeout(function(){
 			if(i <= 10){
-			 count += count * Math.random() ;
+			//  count += count * Math.random() ;
+			 count = i * 11;
+
 			 console.log(Math.floor(count))
 			 i++;
 			}
